# sg-gateway

./: .dockerignore  .env.example  .gitignore  README.md  VERSION  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  release-manifest.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  main.py  version.py
app/clients/: __init__.py  access.py  exports.py  qr.py  repository.py
app/connections/: __init__.py  service.py  settings.py
app/engines/: provisioning.py
app/help/: __init__.py  content.py
app/hostd/: __init__.py  client.py
app/maintenance/: __init__.py  backups.py  diagnostics.py  health.py  operations.py  service.py
app/security/: __init__.py  auth.py  csrf.py
deploy/: README.md  full-uninstall-ubuntu.sh  install-ubuntu.sh  install.sh  rollback.sh  uninstall.sh  update.sh
docker/panel/: Dockerfile
docs/: architecture.md  docker.md  hostd.md  install.md  quality.md  roadmap.md  security.md  ubuntu-one-line.md
engines/: __init__.py  base.py
hostd/: README.md  pyproject.toml  requirements.txt
scripts/: check.ps1  ci-local.ps1  docker-dev.ps1  docker-prod.ps1  run-dev.ps1  test.ps1
tests/: test_auth.py  test_awg_style_ui.py  test_backups.py  test_client_access.py  test_client_exports.py  test_clients_repository.py  test_connection_settings.py  test_csrf.py  test_deploy_files.py  test_diagnostics.py  test_engine_provisioning.py  test_health.py  test_help.py  test_hostd_client.py  test_maintenance.py  test_operations.py  test_recovery.py  test_sidebar_pages.py  test_version.py
(+24 files in other folders)
