[project]
name = "sg-gateway"
version = "0.1.0"
description = "Simple control panel for AmneziaWG and Xray on one server."
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0,<4",
    "waitress>=3.0,<4",
    "qrcode>=7.4,<8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.5,<1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]